--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
+  },
+  "vercel": {
+    "build": {
+      "src": "build",
+      "output": "dist"
+    }
   }
 }
